--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
   };
 
   // Store cell data
-  globalThis.qwebrCellDetails = [{"options":{"autorun":"false","fig-height":5,"editor-max-height":"","out-height":"","out-width":"635px","fig-cap":"","fig-width":7,"results":"markup","message":"true","label":"unnamed-chunk-1","output":"true","editor-font-scale":1,"comment":"","editor-quick-suggestions":"false","read-only":"false","classes":"","dpi":72,"warning":"true","context":"interactive"},"code":"a <- rnorm(50)\na","id":1}];
+  globalThis.qwebrCellDetails = [{"id":1,"options":{"label":"unnamed-chunk-1","warning":"true","editor-max-height":"","editor-quick-suggestions":"false","classes":"","autorun":"false","editor-font-scale":1,"message":"true","results":"markup","read-only":"false","output":"true","fig-height":5,"dpi":72,"out-height":"","context":"interactive","fig-cap":"","fig-width":7,"comment":"","out-width":"635px"},"code":"a <- rnorm(50)\na"}];
 
   </script>
   <script type="module">
@@ -1613,8 +1613,11 @@ Key Responsibilities
 <li class="fragment">Writing efficient and reproducible R scripts.</li>
 <li class="fragment">Developing and maintaining packages.</li>
 <li class="fragment">Collaboration (Working closely with biostatisticians, researchers).</li>
+<li class="fragment">Knowledge Dissemination:
+<ul>
 <li class="fragment">Creating ShinyApps to present results.</li>
-<li class="fragment">Knowledge Dissemination (Sharing findings through presentations, publications, and workshops).</li>
+<li class="fragment">Sharing findings through presentations, publications, and workshops.</li>
+</ul></li>
 </ul>
 </section>
 <section id="section" class="slide level2">
@@ -1644,7 +1647,7 @@ Goals
 </section>
 <section id="plotly" class="slide level2">
 <h2>Plotly</h2>
-<p><video data-src="CLT.mp4" class="absolute" style="top: 50px; left: 0px; height: 85%; " loop="true" autoplay="true" controls=""><a href="CLT.mp4">Video</a></video></p>
+<p><video data-src="CLT.mp4" class="absolute" style="top: 50px; left: 0px; height: 85%; " loop="true" autoplay="true" muted="true" controls=""><a href="CLT.mp4">Video</a></video></p>
 </section>
 <section id="webr" class="slide level2">
 <h2>webR</h2>
