--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
   };
 
   // Store cell data
-  globalThis.qwebrCellDetails = [{"id":1,"options":{"label":"unnamed-chunk-1","warning":"true","editor-max-height":"","editor-quick-suggestions":"false","classes":"","autorun":"false","editor-font-scale":1,"message":"true","results":"markup","read-only":"false","output":"true","fig-height":5,"dpi":72,"out-height":"","context":"interactive","fig-cap":"","fig-width":7,"comment":"","out-width":"635px"},"code":"a <- rnorm(50)\na"}];
+  globalThis.qwebrCellDetails = [{"options":{"fig-cap":"","read-only":"false","label":"unnamed-chunk-1","classes":"","fig-width":7,"comment":"","results":"markup","context":"interactive","out-height":"","dpi":72,"warning":"true","editor-quick-suggestions":"false","autorun":"false","editor-font-scale":1,"output":"true","message":"true","fig-height":5,"editor-max-height":"","out-width":"635px"},"code":"a <- rnorm(50)\na","id":1}];
 
   </script>
   <script type="module">
@@ -1624,10 +1624,10 @@ Key Responsibilities
 <h2></h2>
 <br><br> <br><br> <br><br>
 <h2>
-Goals
+Current Tasks <span class="citation" data-cites="ESD">@ESD</span>
 </h2>
 <ul>
-<li class="fragment">Adding <span class="parenthetical">new functionality</span> to existing packages (e.g.&nbsp;MAMS).</li>
+<li class="fragment">Adding <span class="parenthetical">new functionalities</span> to existing packages (e.g.&nbsp;MAMS).</li>
 <li class="fragment">Create web-documentation <span class="parenthetical"> using pkgdown.</span></li>
 <li class="fragment">New approach <span class="parenthetical"> in mastering MAMS R package for end-users.</span></li>
 </ul>
