--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
   };
 
   // Store cell data
-  globalThis.qwebrCellDetails = [{"options":{"fig-cap":"","read-only":"false","label":"unnamed-chunk-1","classes":"","fig-width":7,"comment":"","results":"markup","context":"interactive","out-height":"","dpi":72,"warning":"true","editor-quick-suggestions":"false","autorun":"false","editor-font-scale":1,"output":"true","message":"true","fig-height":5,"editor-max-height":"","out-width":"635px"},"code":"a <- rnorm(50)\na","id":1}];
+  globalThis.qwebrCellDetails = [{"id":1,"code":"a <- rnorm(50)\na","options":{"fig-cap":"","editor-max-height":"","fig-width":7,"editor-font-scale":1,"fig-height":5,"classes":"","warning":"true","out-height":"","output":"true","label":"unnamed-chunk-1","autorun":"false","read-only":"false","out-width":"635px","results":"markup","comment":"","editor-quick-suggestions":"false","message":"true","dpi":72,"context":"interactive"}}];
 
   </script>
   <script type="module">
@@ -1629,7 +1629,7 @@ Current Tasks <span class="citation" data-cites="ESD">@ESD</span>
 <ul>
 <li class="fragment">Adding <span class="parenthetical">new functionalities</span> to existing packages (e.g.&nbsp;MAMS).</li>
 <li class="fragment">Create web-documentation <span class="parenthetical"> using pkgdown.</span></li>
-<li class="fragment">New approach <span class="parenthetical"> in mastering MAMS R package for end-users.</span></li>
+<li class="fragment">New approach <span class="parenthetical"> for mastering MAMS R package for end-users.</span></li>
 </ul>
 </section>
 <section id="pkgdown" class="slide level2">
